@@ -182,7 +182,6 @@ AC_PROG_INSTALL
 AC_PROG_AWK
 GPH_PROG_DB2ANY
 
-AM_DISABLE_STATIC
 AM_PROG_LIBTOOL
 
 
